# erlang-python

./: .dockerignore  .gitignore  ASGI_NIF_OPTIMIZATIONS.md  CHANGELOG.md  Makefile  PLAN.md  README.md  do_build.sh  do_cmake.sh  rebar.config  start-distributed-demo.sh
.github/workflows/: ci.yml
benchmark_results/: README.md  reactor_modes_20260309_093558.txt
c_src/: CMakeLists.txt  Makefile  py_asgi.c  py_asgi.h  py_buffer.c  py_buffer.h  py_callback.c  py_channel.c  py_channel.h  py_convert.c  py_event_loop.c  py_event_loop.h  py_exec.c  py_logging.c  py_nif.c  py_nif.h  py_parallel_pool.c  py_parallel_pool.h  py_reactor_buffer.c  py_reactor_buffer.h  py_sandbox.c  py_sandbox.h  py_shared_dict.c  py_subinterp_pool.c  py_subinterp_pool.h  py_subinterp_thread.c  py_subinterp_thread.h  py_submit.c  py_submit.h  py_thread_worker.c  py_util.c  py_util.h  py_worker_pool.c  py_worker_pool.h  py_wsgi.c  py_wsgi.h
c_src/CMake/: FindErlang.cmake
doc/: getting-started.md  scalability.md  streaming.md
docker/: Dockerfile.asan  Dockerfile.distributed  Dockerfile.python312  Dockerfile.python314  docker-compose.distributed.yml  docker-compose.yml  run-distributed-demo.sh  run-tests.sh
docs/: ai-integration.md  architecture.md  asyncio.md  buffer.md  channel.md  context-affinity.md  distributed.md  event_loop_architecture.md  getting-started.md  imports.md  inspiration.md  logging.md  memory.md  migration.md  owngil_internals.md  parallel-execution.md  pools.md  preload.md  process-bound-envs.md  reactor.md  sandbox.md  scalability.md  security.md  shared-dict.md  streaming.md  testing-free-threading.md  threading.md  type-conversion.md  web-frameworks.md
examples/: README.md  ai_chat.erl  ai_helpers.py  basic_example.erl  bench_async_task.erl  bench_byte_channel.erl  bench_channel.erl  bench_channel_async.erl  bench_channel_receive.erl  bench_event_loop.erl  bench_event_loop_pool.erl  bench_owngil.erl  bench_owngil_pool.erl  bench_py_buffer.erl  bench_reactor_buffer.erl  bench_reactor_buffer.py  bench_reactor_modes.erl  bench_resource_pool.erl  benchmark.erl  benchmark_compare.erl  benchmark_event_loop.py  distributed_python.erl  elixir_example.exs  embedder_example.erl  embedding_helper.py  erlang_concurrency.erl  erlang_concurrency.py  gen_test.erl  io_bench.py  logging_example.erl  py_buffer_example.erl  rag_example.erl  reactor_echo.erl  reactor_owngil_example.erl  reactor_subinterp_example.erl  reentrant_callback.erl  reentrant_demo.erl  reentrant_demo.py  run_benchmark.erl  semantic_search.erl  (+3 more)
priv/: asgi_async_runner.py  async_stream_helper.py  erlang_asyncio.py  erlang_loop.py  test_asgi_apps.py  test_async_task.py  test_channel_ref.py  test_erlang_loop.py  test_multi_loop.py
priv/_erlang_impl/: __init__.py  _byte_channel.py  _channel.py  _loop.py  _mode.py  _policy.py  _reactor.py  _sandbox.py  _signal.py  _ssl.py  _subprocess.py  _transport.py
priv/tests/: __init__.py  _testbase.py  async_test_runner.py  conftest.py  ct_runner.py  test_base.py  test_context.py  test_dns.py  test_erlang_api.py  test_executors.py  test_process.py  test_signals.py  test_sockets.py  test_spawn_task.py  test_tcp.py  test_udp.py  test_unix.py
scripts/: bench_compare.sh  bench_regression.sh  lint_doc_snippets.escript  stress_thread_callback.sh  test_timer_path.py
src/: erlang_python.app.src  erlang_python_app.erl  erlang_python_sup.erl  py.erl  py_asgi.erl  py_async_driver.erl  py_async_pool.erl  py_async_worker.erl  py_async_worker_sup.erl  py_buffer.erl  py_byte_channel.erl  py_callback.erl  py_callback_id.erl  py_channel.erl  py_context.erl  py_context_init.erl  py_context_router.erl  py_context_sup.erl  py_event_loop.erl  py_event_loop_pool.erl  py_event_loop_proc.erl  py_event_loop_v2.erl  py_event_router.erl  py_event_worker.erl  py_event_worker_registry.erl  py_event_worker_sup.erl  py_import.erl  py_logger.erl  py_nif.erl  py_pool.erl  py_preload.erl  py_reactor_context.erl  py_resource_pool.erl  py_semaphore.erl  py_state.erl  py_subinterp_pool.erl  py_subinterp_worker.erl  py_subinterp_worker_sup.erl  py_thread_handler.erl  py_tracer.erl  (+5 more)
test/: coverage_audit.md  py_SUITE.erl  py_actor_SUITE.erl  py_api_SUITE.erl  py_asgi_async_test.erl  py_async_call_test.erl  py_async_driver_test.erl  py_async_e2e_SUITE.erl  py_async_task_SUITE.erl  py_asyncio_compat_SUITE.erl  py_asyncio_policy_SUITE.erl  py_buffer_SUITE.erl  py_byte_channel_SUITE.erl  py_call_event_driven_test.erl  py_callback_id_test.erl  py_channel_SUITE.erl  py_context_SUITE.erl  py_context_async_drain_SUITE.erl  py_context_async_env_SUITE.erl  py_context_owngil_SUITE.erl  py_context_process_SUITE.erl  py_context_reset_SUITE.erl  py_context_router_SUITE.erl  py_erlang_sleep_SUITE.erl  py_event_loop_SUITE.erl  py_event_loop_bench.erl  py_event_loop_pool_SUITE.erl  py_event_loop_pool_owngil_SUITE.erl  py_event_loop_proc_call_test.erl  py_event_loop_proc_test.erl  py_event_loop_v2_test.erl  py_fd_ops_SUITE.erl  py_import_SUITE.erl  py_import_owngil_SUITE.erl  py_logging_SUITE.erl  py_ml_libs_SUITE.erl  py_multi_loop_SUITE.erl  py_multi_loop_integration_SUITE.erl  py_owngil_features_SUITE.erl  py_pid_send_SUITE.erl  (+24 more)
